<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:gravity="center"
    android:orientation="vertical"
    android:scrollbars="none"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/header_view" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="@dimen/text_300"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/text_30">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="WELCOME...!!!"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginTextHeader"
                    android:textColor="@color/dummyTextLightBlack"
                    android:textSize="@dimen/text_14"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginText"
                    android:textColor="@color/dummyTextLightBlack"
                    android:textSize="@dimen/text_14"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SIGN IN"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_20" />

                    <View
                        android:layout_width="@dimen/text_70"
                        android:layout_height="2dp"
                        android:background="@color/primaryYellow" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_40"
                    android:layout_marginTop="@dimen/text_25"
                    android:background="@drawable/view_background"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/text_25"
                        android:layout_weight="@dimen/weight_15"
                        android:src="@drawable/mobile" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="@dimen/weight_15"
                        android:gravity="center"
                        android:text="+91"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_16" />

                    <EditText
                        android:id="@+id/signInMobileNumber"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="@dimen/weight_75"
                        android:background="@null"
                        android:digits="0123456789"
                        android:hint="@string/hintMobileNumber"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingLeft="2dp"
                        android:paddingRight="@dimen/normalPadding"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_16" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/signInMobileNumberError"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_15"
                    android:gravity="end"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="@dimen/text_18"
                        android:layout_height="@dimen/text_18"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="2dp"
                        android:src="@drawable/error_icon" />

                    <TextView
                        android:id="@+id/numberErrorText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/invalidMobileNumber"
                        android:textColor="@color/erroColorRed"
                        android:textSize="@dimen/text_10" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_40"
                    android:background="@drawable/view_background"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/text_25"
                        android:layout_weight="@dimen/weight_15"
                        android:src="@drawable/password" />

                    <EditText
                        android:id="@+id/signInPassword"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="@dimen/password_weight"
                        android:background="@null"
                        android:hint="@string/hintPassword"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:paddingLeft="@dimen/normalPadding"
                        android:paddingRight="@dimen/normalPadding"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_16" />

                    <EditText
                        android:id="@+id/signInVisiblePassword"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="@dimen/password_weight"
                        android:background="@null"
                        android:hint="@string/hintPassword"
                        android:inputType="text"
                        android:maxLength="15"
                        android:paddingLeft="@dimen/normalPadding"
                        android:paddingRight="@dimen/normalPadding"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_16"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/signInShowPassword"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/text_25"
                        android:layout_weight="@dimen/weight_15"
                        android:src="@drawable/ic_visibility_off_black_24dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/signInPasswordError"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_15"
                    android:gravity="end"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="@dimen/text_18"
                        android:layout_height="@dimen/text_18"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="2dp"
                        android:src="@drawable/error_icon" />

                    <TextView
                        android:id="@+id/passwordErrorText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/invalidPassword"
                        android:textColor="@color/erroColorRed"
                        android:textSize="@dimen/text_10" />

                </LinearLayout>

                <Button
                    android:id="@+id/signInSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_40"
                    android:background="@color/primaryYellow"
                    android:text="SUBMIT"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_18" />

                <TextView
                    android:id="@+id/signInForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="Forgot Password?"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_10"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_30"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:background="@color/primaryBlue"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="New User?"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/signInNewUser"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text=" Sign Up "
                    android:textColor="@color/primaryYellow"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Here"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>