<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/header_view" />

        <RelativeLayout
            android:id="@+id/parentView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <RelativeLayout
                android:id="@+id/parentinnerview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:layout_width="@dimen/text_300"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="FORGOT PASSWORD?"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_16"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="100dp"
                            android:layout_height="5px"
                            android:layout_marginTop="5dp"
                            android:background="@color/primaryYellow" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/forgotPasswordHeader"
                        android:textColor="@color/dummyTextLightBlack"
                        android:textSize="@dimen/text_14"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgotPasswordText"
                        android:textColor="@color/dummyTextLightBlack"
                        android:textSize="@dimen/text_14"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/text_40"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/view_background"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="@dimen/text_25"
                            android:layout_weight="@dimen/weight_15"
                            android:src="@drawable/mobile" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="@dimen/weight_15"
                            android:gravity="center"
                            android:text="+91"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/text_16" />

                        <EditText
                            android:id="@+id/forgotMobileNumber"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="@dimen/weight_75"
                            android:background="@null"
                            android:digits="0123456789"
                            android:hint="@string/hintMobileNumber"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLength="10"
                            android:paddingLeft="5dp"
                            android:paddingRight="@dimen/normalPadding"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/text_16" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/forgotMobileNumberError"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/text_25"
                        android:gravity="end"
                        android:visibility="visible">

                        <ImageView
                            android:layout_width="@dimen/text_18"
                            android:layout_height="@dimen/text_18"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="2dp"
                            android:src="@drawable/error_icon" />

                        <TextView
                            android:id="@+id/passwordErrorText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/invalidMobileNumber"
                            android:textColor="@color/erroColorRed"
                            android:textSize="@dimen/text_10" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/forgotSendOTP"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/text_40"
                        android:background="@color/primaryYellow"
                        android:text="SEND OTP"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_16" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_30"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:background="@color/primaryBlue"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="New User?"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/forgotNewUser"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text=" Sign Up "
                    android:textColor="@color/primaryYellow"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Here"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>